@@ -1,6 +1,6 @@
 How to Install using autoconf'ed TORQUE.
 
-ONLINE: http://clusterresources.com/torquedocs/quickstart.shtml
+ONLINE: http://clusterresources.com/torquedocs/torquequickstart.shtml
 
 - untar the tar file and cd to the top level directory
 
@@ -9,7 +9,7 @@ ONLINE: http://clusterresources.com/torquedocs/quickstart.shtml
 
 - run "make" (See 'BUILD' note below)
 
-- run "make install"
+- run "make install" or "make packages" (See 'INSTALL' note below)
 
 -------------------------------------------------------------------
 
@@ -32,6 +32,44 @@ BUILD: You need to use a POSIX (or nearly POSIX) make. GNU make
   complicating things by using various make flags is not guaranteed
   to work. Don't be surprised if the first thing that make does is
   call configure again. See the note in Makefile.in if this happens.
+
+-------------------------------------------------------------------
+
+INSTALL: The standard "install" target will install all of the
+  configured components.  Individual components can be installed with
+  the following targets: install_clients, install_mom, install_server,
+  install_gui, and install_devel.  If your TORQUE build directory is
+  shared to your nodes, you can rsh/ssh to each node and run:
+  "make install_mom install_clients".
+
+  For more convienent installation on compute nodes and login machines,
+  TORQUE can build customized, distributable, self-extracting packages
+  with the "packages" target.  The packages contain all required files
+  to use a specific subcomponent on any host with the same Operating
+  System.  Environments that use multiple builds can add a useful package
+  name by defining PKGNAME, ie: "make PKGNAME=cluster1-suse packages".  
+
+  Local changes like MOM config files and pro/epilog scripts can be
+  placed in a "package override" directory.  Files in this directory will
+  be added, possibly overwritting default files, to the generated packages.  
+  Override files are scanned from PKGOVERRIDE/$component where PKGOVERRIDE
+  defaults to "./pkgoverride" and $component is one of: clients, mom,
+  server, gui, and devel.  Override files are copied with the full path,
+  ie: "./pkgoverride/mom/$PBS_SERVER_HOME/mom_priv/config".
+
+  If an executable is found at PKGOVERRIDE/$component/post-install, it
+  will be added to the package, executed after installation, and then
+  removed if it exits successfully.
+
+  One might maintain MOM scripts in a permanent location like
+  ~/tpkgoverride/mom and build packages with:
+     make PKGOVERRIDE=~/tpkgoverride packages
+
+  The generated packages can be copied to all other hosts and installed
+  by running the script with --install.  By default, packages will
+  preserve config files (See buildutils/self-extract-head-sh.in for the
+  current list of config files.  Run the package with --help for other
+  options.
 
 -------------------------------------------------------------------
 
