@@ -1,5 +1,6 @@
 2.0.0p2
 
+  new 'packages' make target (see INSTALL) (USC)
   fix check_pwd() memory leak (USC)
 
 2.0.0p1
